# computer_vision_project1

./: .gitignore  CMakeLists.txt  README.md  box.pgm  boxCanny2.pgm  boxCannyClean.pgm  boxSmoothed2.pgm  detectedLines.txt  main.cpp  pentagonCanny2.pgm  pentagonCannyClean.pgm  pentagonLines.pgm  pentagonSmooth2.pgm
